# grpphati_rs

./: .gitignore  Cargo.toml  README.md  map_test.py  pyproject.toml  test.profile  test.py  wedge_test.py
.github/workflows/: python.yml
examples/: disjoint.py  map.py
grpphati_rs/: __init__.py  dflag.py  pipelines.py  rrph.py  sparsifier.py
src/: columns.rs  compute_mapping.rs  homology.rs  lib.rs  sparsifiers.rs
