[package]
name = "grpphati_rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grpphati_rs"
crate-type = ["cdylib"]

[dependencies]
dashmap = "5.4.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rayon = "1.6.1"
