[package]
name = "grpphati_rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grpphati_rs"
crate-type = ["cdylib"]

[dependencies]
dashmap = "5.4.0"
itertools = "0.10.5"
lophat = "0.9.2"
pyo3 = { version = "0.18.0", features = ["extension-module", "hashbrown"] }
rayon = "1.6.1"
